--- a/package.json
+++ b/package.json
@@ -11,14 +11,10 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "lucide-react": "^0.344.0"
+    "lucide-react": "^0.344.0",
+    "recharts": "^2.10.4"
   },
-"dependencies": {
-  "react": "^18.2.0",
-  "react-dom": "^18.2.0",
-  "lucide-react": "^0.344.0",
-  "recharts": "^2.10.4"
-}
-
+  "devDependencies": {
+    "vite": "^5.0.0"
   }
 }
