--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
     "lucide-react": "^0.344.0",
     "recharts": "^2.10.4"
   },
-  "devDependencies": {
-    "vite": "^5.0.0"
-  }
+"devDependencies": {
+  "vite": "^5.0.0",
+  "tailwindcss": "^3.4.1",
+  "postcss": "^8.4.35",
+  "autoprefixer": "^10.4.17"
+}
+
 }
